--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,130 @@
+.logo {
+    /* margin-left: 8vw; */
+    font-size: 40px;
+    /* margin-top: 22vh; */
+    background-color: #000000;
+    color: #e94335;
+    /* border-left: 11px #ea4739 solid; */
+    padding-left: 9px;
+    /* height: 42px; */
+}
+
+.fs-listing {
+  margin-left: -19px;
+}
+
+button.close {
+  background: none;
+  border: none;
+  order: 2
+}
+
+li {
+  list-style-type: none;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+@media screen and (max-width: 990px) {
+.hamburger {
+  position: absolute;
+  bottom: 85px;
+  right: 9px;
+  z-index: 2000;
+}
+.fs-listing {
+  margin-left: -20px;
+}
+.info-screen {
+  overflow: auto;
+  width: 100%;
+  height: 200px;
+  margin-left: 2vw;
+}
+.contain-map {
+  width: 100vw;
+  height: 100vh;
+}
+.side-list {
+position: absolute;
+bottom: 20px;
+z-index: 50;
+background: white;
+display: flex;
+right: 49px
+}
+.menu {
+  order: 2;
+}
+.menu button {
+  background-color: none;
+  border: none;
+  outline: none;
+}
+.logo {
+    top: 8px;
+    text-align: center;
+    position: absolute;
+    z-index: 555;
+    text-align: center;
+    /* margin-left: 8vw; */
+    font-size: 40px;
+    /* margin-top: -4px; */
+    background-color: #000000;
+    color: #e94335;
+    border-left: 11px #ea4739 solid;
+    padding-left: 9px;
+    height: 42px;
+    border-right: 18px black solid;
+}
+.logo > span {
+    top: 50px;
+    margin-top: -5px;
+    color: white;
+}
+
+}
+
+
 #map {
   height: 100%;
 }
 
+
+@media screen and (min-width: 990px) {
+.hamburger {
+  display: none;
+}
+.logo {
+   margin-left: 6vw;
+   margin-top: 22vh;
+   border-left: 11px #ea4739 solid;
+   height: 42px;
+}
+.fs-listings {
+  overflow: auto;
+  font-size: 14px;
+  height: 100px;
+}
 .contain-map {
   width: 82vw;
-  height: 80vh;
-  padding-left: 7vw;
+  height: 90vh;
   padding-right: 6vw;
 }
 
 .main-div {
   display: flex;
-  margin-top: 5vh;
 }
 
 .marker-on-list {
   text-align: left;
-  font-size: 3vh;
+  font-size: 21px;
   border: 0;
-  background: white;
+  background: none;
   outline: none !important;
 }
 
@@ -44,34 +150,13 @@
   margin-left: -2em;
 }
 
-button.close {
-  background: none;
-  border: none;
-  order: 2
-}
-
-.flex {
-  display: flex;
-  justify-content: space-between;
-}
-
-li {
-  list-style-type: none;
-}
-
-.logo {
-margin-left: 8vw;
-font-size: 40px;
-margin-top: 22vh;
-background-color: #000000;
-color: #e94335;
-border-left: 11px #ea4739 solid;
-padding-left: 9px;
-height: 42px;
-}
 .side-list {
-  margin-left: 3vw;
-  width: 600px;
+  background: #f7f6f9;
+  width: 625px;
+}
+
+.side-list > input {
+  margin-top: 2vh;
 }
 
 h2 {
@@ -81,4 +166,40 @@ h2 {
 
 p {
   font-size: 17px;
+}
+
+.info-describe {
+  overflow: auto;
+  height: 70px;
+  font-size: 14px;
+}
+input {
+  margin-top: 100px;
+}
+.logo-and-sidelist {
+  width: 50vw;
+  display:flex;
+}
+.contain-map {
+  width: 50vw;
+}
+.info-screen {
+  width: 38%;
+}
+}
+
+@media screen and (min-width: 990px) and (max-width: 1150px) {
+
+.logo {
+  margin-left: 2vw;
+  margin-right: 4vw;
+}
+  .side-list {
+  margin-left: -4vw;
+  justify-content: flex-end;
+  }
+}
+h3 {
+  margin-bottom: 0;
+  margin-top: 0;
 }
