--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url(http://weloveiconfonts.com/api/?family=iconicfill|maki);
+@import url(http://weloveiconfonts.com/api/?family=iconicfill|maki|entypo);
 
 /* iconicfill */
 [class*="iconicfill-"]:before {
